TRUNK-3804 - Merge Patients ignores visits (increase memory when running unit tests)